Fix alignment when list is shorter

--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -87,6 +87,7 @@ h1 {
 #student-catalog {
   display: grid;
   grid-template-columns: 1fr;
+  align-content: start;
   width: max-content;
 }
 
